Added Github Actions Yaml File

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,4 +16,4 @@ markdown_extensions:
   - toc:
       permalink: true
 
-repo_url: https://github.com/avadlapatla/avadlapatla.github.io/
+repo_url: https://github.com/avadlapatla/blog/
