--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,27 @@
-site_name: Abhinav Vadlapatla
+site_name: Abhinav's Blog
+
+# theme:
+#   name: material
+#   palette:
+#     primary: blue
+#   #custom_dir: overrides
+#   features:
+#     - instant
+#     - tabs
 
 theme:
-  name: material
+  name: 'material'
+  custom_dir: 'theme'
+  language: en
+  include_sidebar: true
+  favicon: assets/img/favicon.png
+  logo: assets/img/clouds.png
   palette:
-    primary: blue
-  #custom_dir: overrides
-  features:
-    - instant
-    - tabs
+    primary: 'cyan'
+    accent: 'cyan'
 
 nav:
-  - 'Home' : index.md
+  - 'Welcome' : index.md
   - EKS:
     - 'Setup EKS Cluster' : eks/cluster.md
     - 'Cluster Autoscaler on Fargate': eks/fargate_autoscaler.md
