--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ theme:
   language: en
   include_sidebar: true
   favicon: assets/img/favicon.png
-  logo: assets/img/clouds.png
+  logo: assets/img/favicon.png
   palette:
     primary: 'cyan'
     accent: 'cyan'
